--- a/spisak.html
+++ b/spisak.html
@@ -2,56 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
+    <!-- 
+      Zasto ponavljati sve iz style.css u csszaspisak.css
+      Samo stilove za tabelu stavi u csszaspisak, mada je nazovi tabela.css, spisak.css ili nesto tako
+      i onda importuj oba css, jer ti niko ne brani da povezes html fajl sa vise css fajlova
+    -->
+    <link rel="stylesheet" href="./public/css/style.css" />
     <link rel="stylesheet" href="./public/css/csszaspisak.css" />
-    <script src="./js/app.js" defer></script>
     <title>ИСПОЈ</title>
   </head>
   <body>
-    <h1>
-      Информациони систем пријаве за одсуство из јединице
-    </h1>
+    <h1>Информациони систем пријаве за одсуство из јединице</h1>
 
     <main>
       <div class="container">
         <table class="tabela">
-            <thead>
-                <tr>
-                <h2>Списак пријављених за одсуство</h2>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                   <th>Редни број</th>
-                   <th>Име и презиме</th>
-                   <th>Тип викенда</th>
-                   <th>Пријава</th>
-                 </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Немања Каплановић</td>
-                    <td>Преноћисте</td>
-                    <td><button class="bzat" type="submit">Види пријаву</button></td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Немања Каплановић</td>
-                    <td>Викенд</td>   
-                    <td><button class="bzat" type="submit">Види пријаву</button></td> 
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Немања Каплановић</td>
-                    <td>ДДК</td>
-                    <td><button class="bzat" type="submit">Види пријаву</button></td>
-                </tr>
-            </tbody>
+          <thead>
+            <tr>
+              <h2>Списак пријављених за одсуство</h2>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>Редни број</th>
+              <th>Име и презиме</th>
+              <th>Тип викенда</th>
+              <th>Пријава</th>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Немања Каплановић</td>
+              <td>Преноћисте</td>
+              <td><button class="bzat" type="submit">Види пријаву</button></td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Немања Каплановић</td>
+              <td>Викенд</td>
+              <td><button class="bzat" type="submit">Види пријаву</button></td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Немања Каплановић</td>
+              <td>ДДК</td>
+              <td><button class="bzat" type="submit">Види пријаву</button></td>
+            </tr>
+          </tbody>
         </table>
       </div>
-      
     </main>
   </body>
 </html>
