Dodata html css prijava

--- a/spisak.html
+++ b/spisak.html
@@ -9,7 +9,7 @@
       i onda importuj oba css, jer ti niko ne brani da povezes html fajl sa vise css fajlova
     -->
     <link rel="stylesheet" href="./public/css/style.css" />
-    <link rel="stylesheet" href="./public/css/csszaspisak.css" />
+    <link rel="stylesheet" href="./public/css/spisak.css" />
     <title>ИСПОЈ</title>
   </head>
   <body>
