Ubacio slicku pored titla

--- a/Bane/main.html
+++ b/Bane/main.html
@@ -6,6 +6,7 @@
     <!--Sve isto kao nemanji + imao si jedan </form> tag viska, pazi na indentaciju-->
     <link rel="stylesheet" href="./css/css.css" />
     <title>ИСПОЈ</title>
+    <link rel="icon" href="./images/logo.png" type="image/icon type">
   </head>
   <body>
     <h1>Информациони систем пријаве за одсуство из јединице</h1>
