--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <link rel="stylesheet" href="./public/css/style.css" />
     <title>ИСПОЈ</title>
+    <link rel="icon" href="./images/logo.png" type="image/icon type">
   </head>
   <body>
     <h1>
