--- a/prijava.html
+++ b/prijava.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./public/css/style.css">
     <link rel="stylesheet" href="./public/css/prijava.css">
     <title>ИСПОЈ</title>
+    <link rel="icon" href="./images/logo.png" type="image/icon type">
 </head>
 
 <body>
