--- a/spisak.html
+++ b/spisak.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./public/css/style.css" />
     <link rel="stylesheet" href="./public/css/spisak.css" />
     <title>ИСПОЈ</title>
+    <link rel="icon" href="./images/logo.png" type="image/icon type">
   </head>
   <body>
     <h1>Информациони систем пријаве за одсуство из јединице</h1>
