--- a/unosprijave.html
+++ b/unosprijave.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
     <!--Sve isto kao nemanji + imao si jedan </form> tag viska, pazi na indentaciju-->
-    <link rel="stylesheet" href="./css/css.css" />
+    <link rel="stylesheet" href="./public/css/unosprijave.css" />
+    <link rel="stylesheet" href="./public/css/style.css">
     <title>ИСПОЈ</title>
     <link rel="icon" href="./images/logo.png" type="image/icon type">
   </head>
