Pogledao, dobro je, nesto je cudno u prijavi

--- a/unosprijave.html
+++ b/unosprijave.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
-    <!--Sve isto kao nemanji + imao si jedan </form> tag viska, pazi na indentaciju-->
+    <!--U ovom ti se nesto sjebalo, otisli su ovi radio button-i desno-->
     <link rel="stylesheet" href="./public/css/unosprijave.css" />
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="./public/css/style.css" />
     <title>ИСПОЈ</title>
-    <link rel="icon" href="./images/logo.png" type="image/icon type">
+    <link rel="icon" href="./images/logo.png" type="image/icon type" />
   </head>
   <body>
     <h1>Информациони систем пријаве за одсуство из јединице</h1>
