--- a/uvidprijava.html
+++ b/uvidprijava.html
@@ -1,43 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="./public/css/style.css">
-    <link rel="stylesheet" href="./public/css/prijava.css">
+    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="./public/css/prijava.css" />
     <title>ИСПОЈ</title>
-    <link rel="icon" href="./images/logo.png" type="image/icon type">
-</head>
+    <link rel="icon" href="./images/logo.png" type="image/icon type" />
+  </head>
 
-<body>
-    <h1>
-        Информациони систем пријаве за одсуство из јединице
-    </h1>
+  <body>
+    <h1>Информациони систем пријаве за одсуство из јединице</h1>
 
     <main>
-        <h2>Увид пријаве</h2>
-        <form>
-            <article id="Vc">
-                <label for="">Ime i prezime:</label><input type="text" />
-            </article>
-            <article id="alpha">
-                <label>Датум одласка: </label><input type="date" />
-            </article>
-            <article id="start">
-                <label>Датум povratka: </label><input type="date" />
-            </article>
-        </form>
-        <div class="container">
-            <button id="buttonZaTrue">
-                <img src="./images/true.png" alt="">
-            </button>
-            <button id="buttonZaFalse">
-                <img src="./images/false.png" alt="">
-            </button>
-        </div>
-
+      <h2>Увид пријаве</h2>
+      <form>
+        <!-- Ovde ne treba da budu inputi, nego samo da pise ko se prijavio,
+            za kad i razlog -->
+        <article id="Vc"><label for="">Ime i prezime:</label><input type="text" /></article>
+        <article id="alpha"><label>Датум одласка: </label><input type="date" /></article>
+        <article id="start"><label>Датум povratka: </label><input type="date" /></article>
+      </form>
+      <div class="container">
+        <button id="buttonZaTrue">
+          <img src="./images/true.png" alt="" />
+        </button>
+        <button id="buttonZaFalse">
+          <img src="./images/false.png" alt="" />
+        </button>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
