Promena, radio butoni vraceni na mesto, span umesto inputa u uvidprijave.html

--- a/uvidprijava.html
+++ b/uvidprijava.html
@@ -17,9 +17,9 @@
       <form>
         <!-- Ovde ne treba da budu inputi, nego samo da pise ko se prijavio,
             za kad i razlog -->
-        <article id="Vc"><label for="">Ime i prezime:</label><input type="text" /></article>
-        <article id="alpha"><label>Датум одласка: </label><input type="date" /></article>
-        <article id="start"><label>Датум povratka: </label><input type="date" /></article>
+        <article id="Vc"><label for="">Ime i prezime:</label><span class="">Милош Мишић</span></article>
+        <article id="alpha"><label>Датум одласка: </label><span class="">24.5.2023</span></article>
+        <article id="start"><label>Датум povratka: </label><span class="">25.5.2023</span></article>
       </form>
       <div class="container">
         <button id="buttonZaTrue">
