--- a/public/html/uvidprijava.html
+++ b/public/html/uvidprijava.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="./public/css/style.css" />
-    <link rel="stylesheet" href="./public/css/prijava.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/prijava.css" />
     <title>ИСПОЈ</title>
     <link rel="icon" href="./images/logo.png" type="image/icon type" />
   </head>
