--- a/public/html/uvidprijava.html
+++ b/public/html/uvidprijava.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/prijava.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/prijava.css" />
     <title>ИСПОЈ</title>
-    <link rel="icon" href="./images/logo.png" type="image/icon type" />
+    <link rel="icon" href="../images/logo.png" type="image/icon type" />
   </head>
 
   <body>
@@ -21,10 +21,10 @@
       </form>
       <div class="container">
         <button id="buttonZaTrue">
-          <img src="./images/true.png" alt="" />
+          <img src="../images/true.png" alt="" />
         </button>
         <button id="buttonZaFalse">
-          <img src="./images/false.png" alt="" />
+          <img src="../images/false.png" alt="" />
         </button>
       </div>
     </main>
