--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>ИСПОЈ</title>
-    <link rel="icon" href="./images/logo.png" type="image/icon type">
+    <link rel="icon" href="../images/logo.png" type="image/icon type">
   </head>
   <body>
     <h1>
