--- a/public/html/odobreno.html
+++ b/public/html/odobreno.html
@@ -8,15 +8,22 @@
       Samo stilove za tabelu stavi u csszaspisak, mada je nazovi tabela.css, spisak.css ili nesto tako
       i onda importuj oba css, jer ti niko ne brani da povezes html fajl sa vise css fajlova
     -->
-    <link rel="stylesheet" href="./public/css/style.css" />
-    <link rel="stylesheet" href="./public/css/spisak.css">
-    <link rel="stylesheet" href="./public/css/odobreno.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/spisak.css">
+    <link rel="stylesheet" href="../css/odobreno.css" />
     <title>ИСПОЈ</title>
-    <link rel="icon" href="./images/logo.png" type="image/icon type">
+    <link rel="icon" href="../images/logo.png" type="image/icon type">
   </head>
   <body>
     <h1>Информациони систем пријаве за одсуство из јединице</h1>
-
+    <div id="buttontab">
+      <a href="spisak.html"><div class="tab">
+        Списак пријава одсуства
+      </div></a>
+      <a href="odobreno.html"><div class="tab active">
+        Списак одобрених одсуства
+      </div></a>
+    </div>
     <main>
       <div class="container">
         <table class="tabela">
