--- a/public/html/unosprijave.html
+++ b/public/html/unosprijave.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/unosprijave.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/unosprijave.css" />
     <title>ИСПОЈ</title>
     <link rel="icon" href="../images/logo.png" type="image/icon type" />
   </head>
