--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/login.css">
     <title>ИСПОЈ</title>
     <link rel="icon" href="../images/logo.png" type="image/icon type">
   </head>
